(feature) Show an initial question with a set of answers
The answers are shown as a series of radio buttons and their labels are
stored in `config/locales/en.yml`.

I've added the `i18n-debug` gem in order to easily determine which I18n
key we should be setting when running the server in development.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,3 @@
----
 en:
   address_search:
     change: Change
@@ -15,3 +14,10 @@ en:
         create: Use this address
       address_search:
         create: Find my address
+      create: Continue
+  simple_form:
+    options:
+      start_form:
+        priority_repair:
+          'yes': 'Yes'
+          'no': 'No'
