--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,8 @@ en:
   appointments:
     new:
       title: Book a repair appointment
+  errors:
+    no_selection: Please choose an answer before continuing.
   helpers:
     submit:
       address:
