--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,9 @@ en:
   address_search:
     change: Change
     not_found: No addresses found
+  addresses:
+    errors:
+      blank: Please choose your address to continue
   appointments:
     new:
       title: Book a repair appointment
