(chore) Render dummy form that doesn't persist inputs
This gives us a template for creating placeholder forms to enable us to
get the full journey in place for user testing.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,8 @@ en:
       address_search:
         create: Find my address
       create: Continue
+      dummy_form:
+        submit: Continue
   simple_form:
     labels:
       address:
