(feature) Optional rather than required fields are marked
Simple Form defaults to marking required fields with an asterisk,
whereas GOVUK (and others) recommend marking optional fields instead.

The fix is heavily inspired by this blog post:
https://jeremysmith.co/posts/2015-12-03-how-to-mark-optional-form-fields-with-simple-form/

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -3,8 +3,9 @@ en:
     "yes": 'Yes'
     "no": 'No'
     required:
-      text: 'required'
-      mark: '*'
+      html: ''
+    optional:
+      html: ' <span class="optional">(optional)</span>' # NB: space at beginning
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
