(chore) Add missing translations
NB: Adding these under the `activemodel` key in `en.yml` means that they
used in the validation errors, as well for the form field labels.

I've included `callback_time` in both places, because the wording needs
to be different depending on context:

  - Form field should ask "What time is best to call you?"
  - Validation error is "Best time to call you", to avoid the strange
    "What time is best to call you? can't be blank"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,18 @@
 en:
+  activemodel:
+    attributes:
+      contact_details_form:
+        callback_time: Best time to call you
+      describe_unknown_repair_form:
+        description: Problem description
+      dummy_form:
+        description: Problem description
+    errors:
+      models:
+        contact_details_form:
+          attributes:
+            callback_time:
+              blank: is required
   address_search:
     change: Change
     not_found: No addresses found
