(chore) User gets an error if they don't select an address
If the user doesn't select an address, show them an error and redisplay
the address search results.

To achieve this, first the entered postcode is stored in a hidden field
so it can be reused if an error occurs.

The purpose of the `Address` model wasn't particularly clear, so I've
renamed it to `AddressForm`. This change means that the validation of
the required field `property_preference` can be moved into it.

Additionally, when re-rendering the search results within
`AddressesController`, we can use the form object rather than
interrogating `params` directly.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,8 @@
 en:
   activemodel:
     attributes:
+      address_form:
+        property_reference: Address
       contact_details_form:
         callback_time: Best time to call you
       describe_unknown_repair_form:
@@ -37,7 +39,7 @@ en:
       contact_details_form:
         callback_time: What time is best to call you?
     options:
-      address:
+      address_form:
         property_reference:
           address_isnt_here: "My address isn't here"
       contact_details_form:
