(refactor) Change 'time' to 'callback_time'
In future we'll have appointment times as well, so it's good to be clear
what we're talking about

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
       name: 'Name: %{name}'
       phone: 'Phone number: %{phone}'
       address: 'Address: %{address}'
-      time: 'Time: %{time}'
+      callback_time: 'Callback time: %{callback_time}'
   contact-details:
     title: Who should we contact about this repair?
   errors:
