--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
       blank: Please choose your address to continue
   back_links:
     prefix: Back to %{page_description}
+    previous: previous page
     questions/start: start
     address_searches: find my address
     describe_repair: problem description
