(feature) Back links now all say 'Back'
This is simpler to manage and means that we don't need to know exactly
where we're going back _to_

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,12 +21,7 @@ en:
   addresses:
     errors:
       blank: Please choose your address to continue
-  back_links:
-    prefix: Back to %{page_description}
-    previous: previous page
-    questions/start: start
-    address_searches: find my address
-    describe_repair: problem description
+  back_link: Back
   confirmation:
     summary:
       description: 'Description: %{description}'
