--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,12 @@ en:
           afternoon: "afternoon (12pm - 5pm)"
       start_form:
         answer:
-          'yes': 'Yes'
-          'no': 'No'
+          smell_gas: I can smell gas
+          no_heating: I have no heating
+          no_water: I have no water
+          no_power: I have no power
+          water_leak: I have a water leak which I cannot contain
+          not_secure_access: I cannot secure access to my property
+          home_adaptations: My home has been adapted for my disability
+          none_of_the_above: No, my problem is not one of the above
   title: Report a repair
