(feature) Room is stored and shown on confirmation
Since we're depending on this field being there, we need to make it
mandatory and update fixtures accordingly.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
   back_link: Back
   confirmation:
     summary:
+      room: 'Room: %{room}'
       description: 'Description: %{description}'
       name: 'Name: %{name}'
       phone: 'Phone number: %{phone}'
