(fix) use 'to' instead of dashes in time ranges
As per the gov.uk style guide:
https://www.gov.uk/guidance/style-guide/a-to-z-of-gov-uk-style#times

> use ‘to’ in time ranges, not hyphens, en rules or em dashes:
> 10am to 11am (not 10-11am)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,8 +53,8 @@ en:
           address_isnt_here: "My address isn't here"
       contact_details_form:
         callback_time:
-          morning: "morning (8am - midday)"
-          afternoon: "afternoon (midday - 5pm)"
+          morning: "morning (8am to midday)"
+          afternoon: "afternoon (midday to 5pm)"
       start_form:
         answer:
           smell_gas: I can smell gas
