(fix)Tweak content on screening filter page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,9 +70,9 @@ en:
           none_of_the_above: No, my problem is not one of the above
       screening_filter_form:
         answer:
-          communal: Repair is in the communal area
-          home_adaptations: My home has been adapted for my disability
+          communal: Repair is in a communal area
+          home_adaptations: Related to my property that is adapted for disability
           multiple_properties: Repair problem affects multiple properties
-          recent_repair: Repair was made within the last month
+          recent_repair: The same issue was repaired in the last month
           none_of_the_above: No, my problem is not one of the above
   title: Report a repair
