--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,9 +59,9 @@ en:
       start_form:
         answer:
           smell_gas: I can smell gas
-          no_heating: I have no heating
-          no_water: I have no water
-          no_power: I have no electricity
+          no_heating: I have no heating at all
+          no_water: I have no water at all
+          no_power: I have no electricity at all
           water_leak: I have a major leak or an upsurge of water
           water_leak_electrics: I have water leaking onto electrics
           not_secure_access: I can't secure my property
